--- a/WebApplication/Views/HomeUser/ProductDetail.cshtml
+++ b/WebApplication/Views/HomeUser/ProductDetail.cshtml
@@ -59,10 +59,14 @@
                                 <input type="text" name="quantity" value="2" maxlength="2" size="1" class="number">
                                 <input class="increment" type="button" value="+">
                             </div>
+
+
                             <div class="btn-block">
-                                <a href="./cart.html" class="cus-btn primary"> Add to Cart</a>
+                                <a href="@Url.Action("AddToCart", "HomeUser", new { productId = @Model.ProductId })" class="cus-btn primary"> Add to Cart</a>
                                 <a href="./shop-listing-1.html" class="cus-btn light st-2"> Purchase Now</a>
                             </div>
+
+
                             <div class="social-link">
                                 <h4 class="h-27 light-black">Share this product:</h4>
                                 <ul class="unstyled social-icons">
