--- a/WebApplication/Views/HomeUser/Wishlist.cshtml
+++ b/WebApplication/Views/HomeUser/Wishlist.cshtml
@@ -67,7 +67,7 @@
                                                 </div>
                                                 <div class="btn-block">
 
-                                                    <a href="@Url.Action("AddToCart", "Cart", new { productId = product.ProductId })">Add to Cart</a>
+                                                    <a href="@Url.Action("AddToCart", "Wishlist", new { productId = product.ProductId })">Add to Cart</a>
 
                                                     <a href="@Url.Action("DeleteProductFromWishlist", "Wishlist", new { productId = product.ProductId })" class="bin">
                                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
