--- a/WebApplication/Views/HomeUser/Cart.cshtml
+++ b/WebApplication/Views/HomeUser/Cart.cshtml
@@ -131,6 +131,9 @@
             <div>
                 <a href="@Url.Action("ShopListing", "HomeUser")" class="cus-btn primary">Continue Shopping</a>
             </div>
+            <div>
+                <a href="@Url.Action("Checkout", "HomeUser")" class="cus-btn primary">Go to Checkout</a>
+            </div>
 
         </div>
     </section>
