EditInfoUser, get rid of cart and wishlist on admin account

--- a/WebApplication/Views/Home/ProductDetail.cshtml
+++ b/WebApplication/Views/Home/ProductDetail.cshtml
@@ -58,8 +58,8 @@
                                 <input class="increment" type="button" value="+">
                             </div>
                             <div class="btn-block">
-                                <a href="./cart.html" class="cus-btn primary"> Add to Cart</a>
-                                <a href="./shop-listing-1.html" class="cus-btn light st-2"> Purchase Now</a>
+                                <a href="@Url.Action("LogIn", "Login")" class="cus-btn primary"> Add to Cart</a>
+                                <a href="@Url.Action("LogIn", "Login")" class="cus-btn light st-2"> Purchase Now</a>
                             </div>
                             <div class="social-link">
                                 <h4 class="h-27 light-black">Share this product:</h4>
