--- a/WebApplication/Views/Shared/LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/LayoutAdmin.cshtml
@@ -140,7 +140,7 @@
         @Html.ActionLink("Manage users", "ManageUsers", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Manage products", "ManageProduct", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Manage reviews", "ManageReview", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
-        @Html.ActionLink("Manage Content", "ManageContent", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
+        @Html.ActionLink("Manage content", "ManageContent", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("View orders", "ViewOrders", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
     </div>
     <div class="main-content">
