--- a/WebApplication/Views/ManageUsers/EditUser.cshtml
+++ b/WebApplication/Views/ManageUsers/EditUser.cshtml
@@ -5,8 +5,8 @@
 
 @model WebApplication.Models.UserDataModel
 
-<h3>Edit User id = @Model.UserId </h3>
 
+<h3>Edit User id = @Model.UserId </h3>
 
 @using (Html.BeginForm("EditUserAction", "ManageUsers", FormMethod.Post))
 {
@@ -26,19 +26,8 @@
 
     <div class="form-group">
         <label for="Password">Password</label>
-        <textarea type="text" class="form-control" id="Password" name="Password" required>@Model.Password</textarea>
+        <input type="password" class="form-control" id="Password" name="Password" value="@Model.Password" required>
     </div>
-
-    @*<div class="form-group">
-        <label for="ConfirmPassword">Confirm Password</label>
-        <textarea type="text" class="form-control" id="ConfirmPassword" name="ConfirmPassword" required>@Model.ConfirmPassword</textarea>
-    </div>*@
-
-    @*<div class="form-group">
-        <label for="KeyCredential">Key Credential</label>
-        <textarea type="text" class="form-control" id="KeyCredential" name="KeyCredential">@Model.KeyCredential</textarea>
-    </div>*@
-
 
     <button type="submit" class="btn btn-primary">Save changes</button>
 
